<resources>
    <string name="app_name">IVPN</string>
    <string name="action_settings">Settings</string>
    <string name="tutorial_page_title_multihop">Multi-hop connections</string>
    <string name="tutorial_page_title_locations">Popular locations</string>
    <string name="tutorial_page_title_access">All device access</string>
    <string name="tutorial_page_title_security">Security</string>
    <string name="tutorial_page_descr_multihop">Specify your entry and exit server with secured traffic in between, for even stronger security</string>
    <string name="tutorial_page_descr_locations">IVPN offers 20+ locations with fast gigabit connections</string>
    <string name="tutorial_page_descr_access">Use your IVPN account on all your devices, we support Windows, Mac, iOS, Android and Linux</string>
    <string name="tutorial_page_descr_security">Get <b>serious</b> privacy protection and peace of mind</string>
    <string name="tutorial_log_in">LOG IN TO MY ACCOUNT</string>
    <string name="tutorial_start_free_trial">START MY FREE TRIAL</string>
    <string name="trial_login_hint"><font size="15">Email address</font></string>
    <string name="trial_pass_hint"><font size="15">Create password</font></string>
    <string name="trial_have_account">Already have an account?</string>
    <string name="trial_btn_create_account">Create Account</string>
    <string name="trial_log_in">Log In</string>
    <string name="sign_in_login_hint"><font size="15">Email address</font></string>
    <string name="sign_in_pass_hint"><font size="15">Password</font></string>
    <string name="sign_in_username_hint"><font size="15">Account ID</font></string>
    <string name="sign_in_btn_login">LOG IN TO MY ACCOUNT</string>
    <string name="sign_in_forgot_log_in">Forgot your password</string>
    <string name="auth_bad_login">Bad login</string>
    <string name="sign_in_title">Log in</string>
    <string name="login_account_id_description">Your account ID can be found in the Client Area of the website.</string>
    <string name="login_no_account">Don\'t have an account?</string>
    <string name="login_switch_to_sign_up">Sign up</string>
    <string name="sign_up_start_trial">START MY FREE TRIAL</string>
    <string name="sign_up_title">Sign up</string>
    <string name="sign_up_hint">Email address</string>
    <string name="sign_up_password_hint">Create password</string>
    <string name="sign_up_no_password_error">The password field is required.</string>
    <string name="sign_up_wrong_email_format">The format of your email address is not correct.</string>
    <string name="sign_up_unknown_error">Unknown error, please contact support and send logs</string>
    <string name="reset_password_info">We will send you the confirmation Email</string>
    <string name="reset_password_edittext_hint">Your Email</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="reset_password_button">RESET YOUR PASSWORD</string>
    <string name="reset_password_back_to_login">BACK TO LOG IN</string>
    <string name="reset_password_check_email">Please check email</string>
    <string name="reset_password_server_error">Server error, please try again later</string>
    <string name="reset_password_reach_max_confirmation_tries">You can resend the confirmation email only 3 times. Please check your spam.</string>
    <string name="settings_title">Settings</string>
    <string name="settings_server">Server</string>
    <string name="settings_connection">Connection</string>
    <string name="settings_about">About</string>
    <string name="settings_interface">Interface</string>
    <string name="settings_account">Account</string>
    <string name="settings_other">Advanced settings</string>
    <string name="settings_terms_of_service">Terms of service</string>
    <string name="settings_privacy_policy">Privacy policy</string>
    <string name="settings_color_theme">Color theme</string>
    <string name="settings_enable_logging">Enable logging</string>
    <string name="settings_enable_crashes">Enable crash logging</string>
    <string name="settings_enable_multi_hop">Multi-hop connection</string>
    <string name="settings_kill_switch">Kill switch</string>
    <string name="settings_always_on_vpn">Always-on VPN</string>
    <string name="setting_anti_surveillance">AntiTracker</string>
    <string name="setting_custom_dns">Custom DNS</string>
    <string name="settings_start_on_boot">Start on boot</string>
    <string name="settings_multi_hop_description">You will be redirected through 2 servers.</string>
    <string name="settings_username">Account ID</string>
    <string name="settings_port_label">Preferred protocol &amp; port</string>
    <string name="settings_account_type">Account type</string>
    <string name="settings_active_until">Active until</string>
    <string name="settings_next_billing">Next billing date</string>
    <string name="settings_manage_subscription">Manage subscription</string>
    <string name="settings_resubscribe">Resubscribe</string>
    <string name="settings_logout">LOG OUT</string>
    <string name="settings_login_and_sign_up">LOG IN or SIGN UP</string>
    <string name="settings_subscriptions">SUBSCRIPTIONS</string>
    <string name="settings_send_logs">SEND LOGS</string>
    <string name="settings_split_tunneling">Split tunneling</string>
    <string name="settings_private_emails">PRIVATE EMAILS</string>
    <string name="settings_account_type_trial">3-day free trial</string>
    <string name="settings_account_type_subscription">Monthly subscription</string>
    <string name="settings_do_not_collect_your_data">We can\'t see these until you send them to us.</string>
    <string name="settings_crash_logging_description">Anonymous crash logs will be sent to IVPN to help us improve the application.</string>
    <string name="settings_split_tunneling_description">Choose which apps you want to use with IVPN.</string>
    <string name="settings_kill_switch_description">Allow using internet only when IVPN connection is enabled.</string>
    <string name="settings_always_on_vpn_description">Can help to improve protection.</string>
    <string name="settings_anti_surveillance_description">Configure ad, malware, and tracker blocking.</string>
    <string name="settings_custom_dns_description">Specify DNS server when connected to VPN.</string>
    <string name="settings_updates_title">Updates</string>
    <string name="settings_protocol_selection_description">Choose VPN protocol and associated with it settings.</string>
    <string name="settings_vpn_protocol">VPN protocol</string>
    <string name="settings_action">SETTINGS</string>
    <string name="settings_permission_description">To send an email with logs you need to allow us to use your storage.</string>
    <string name="snackbar_to_change_server_disconnect_first_msg">To change server, please disconnect first</string>
    <string name="snackbar_to_use_antitracker_disconnect">To use AntiTracker, please disconnect first</string>
    <string name="snackbar_to_use_custom_dns_disconnect">To use Custom DNS, please disconnect first</string>
    <string name="snackbar_to_use_split_tunneling_disconnect">To use split tunneling, please disconnect first</string>
    <string name="snackbar_to_change_protocol_disconnect">To change protocol, please disconnect first</string>
    <string name="snackbar_to_change_port_disconnect_first_msg">To change port please disconnect first</string>
    <string name="snackbar_to_change_multihop_disconnect_first_msg">To change Multi-hop settings please disconnect first</string>
    <string name="snackbar_multihop_not_allowed_for_wireguard">Multi-hop is not available for WireGuard right now</string>
    <string name="snackbar_multihop_not_allowed_for_wg">Multi-hop is not available for WireGuard right now</string>
    <string name="snackbar_new_try_with_different_port">Connection to server blocked, reconnecting on a different port. Please wait until connection is established.</string>
    <string name="snackbar_disconnect_first">DISCONNECT</string>
    <string name="settings_send_email">mailto:</string>
    <string name="settings_send_email_via">Send email via</string>
    <string name="settings_package">package:</string>
    <string name="settings_always_on_vpn_title">Always-on VPN</string>
    <string name="settings_start_on_boot_title">Start on system boot</string>
    <string name="settings_start_on_boot_description">Enable VPN connection on system boot.</string>
    <string name="settings_always_on_vpn_note">This feature enables you to automatically establish a VPN connection after the device boots. It should be manually enabled from the device settings inside the IVPN app profile. In addition, to prevent data leaks we recommend enabling \"Block connections without VPN\" from within the IVPN app profile.</string>
    <string name="settings_always_on_vpn_action">Go to settings</string>
    <string name="settings_trusted_wifi_title">Network protection</string>
    <string name="settings_trusted_wifi_description">Configure how IVPN will behave on connection to Wi-Fi or mobile networks.</string>
    <string name="start_on_boot_title">Start on boot</string>
    <string name="start_on_boot_description">Due to system restrictions the vpn may take up to 1 minute to connect after system boot.</string>
    <string name="start_on_boot_brand_restrictions">Some vendors might require you to provide additional permission to allow app Autostart on boot</string>
    <string name="start_on_boot_read_more">read more</string>
    <string name="settings_color_theme_light">Light</string>
    <string name="settings_color_theme_dark">Dark</string>
    <string name="settings_color_theme_system_default">System default</string>
    <string name="settings_color_theme_system_by_battery">By battery</string>
    <string name="updates_info_title">Updates</string>
    <string name="updates_current_version">Current version</string>
    <string name="updates_version_up_to_date">You are using the latest version</string>
    <string name="updates_check_for_updates">Check for updates</string>
    <string name="updates_new_version_available">New version available</string>
    <string name="updates_proceed">Download</string>
    <string name="updates_updates_settings">Settings</string>
    <string name="update_check_auto_for_update">Check automatically for updates</string>
    <string name="update_show_notification">Show notifications</string>
    <string name="notification_update_title">IVPN update available</string>
    <string name="notification_update_message">Install the latest version of IVPN to ensure your privacy and security</string>
    <string name="notification_update_proceed">Download</string>
    <string name="notification_update_skip">Skip</string>
    <string name="notification_update_settings">Settings</string>
    <string name="notification_update_channel">IVPN updates channel</string>
    <string name="settings_anti_surveillance_title">AntiTracker</string>
    <string name="anti_surveillance_enable_title">Enable AntiTracker</string>
    <string name="anti_surveillance_description">AntiTracker uses our private DNS to block ads, malicious website, and third-party trackers such as Google Analytics.</string>
    <string name="private_emails_new_feature_for_you">New feature!</string>
    <string name="private_emails_new_feature_title">Generate private email addresses</string>
    <string name="private_emails_new_feature_description">Use our new private email service to generate as many private email addresses as you wish. Emails are automatically forwarded to your registered email address.</string>
    <string name="private_emails_new_feature_button">Got it</string>
    <string name="connect_menu_private_email">Private Emails</string>
    <string name="connect_menu_settings">Settings</string>
    <string name="connect_menu_location">Location</string>
</resources>