<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:icon="@drawable/ic_info"
        app:showAsAction="ifRoom"
        android:title="@string/connect_menu_location" />
    <item
        android:id="@+id/action_private_emails"
        android:orderInCategory="100"
        android:icon="@drawable/ic_mailbox_wrapper"
        app:showAsAction="ifRoom"
        android:title="@string/connect_menu_private_email" />
    <item
        android:id="@+id/action_new_private_emails"
        android:orderInCategory="101"
        android:icon="@drawable/ic_mailbox_new"
        app:showAsAction="ifRoom"
        android:title="@string/connect_menu_private_email" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="102"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"
        android:title="@string/connect_menu_settings" />
</menu>