<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="net.ivpn.client.ui.settings.SettingsViewModel" />
    </data>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/SettingsSectionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_other" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:onClick="splitTunneling"
                android:orientation="vertical"
                android:paddingStart="@dimen/settings_margin_left"
                android:paddingTop="14dp"
                android:paddingBottom="14dp">

                <TextView
                    style="@style/SettingsOptionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_split_tunneling" />

                <TextView
                    style="@style/SettingsOptionDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/settings_split_tunneling_description"
                    android:textAlignment="viewStart" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_section_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:onClick="trustedWifi"
                android:orientation="vertical"
                android:paddingStart="@dimen/settings_margin_left"
                android:paddingTop="14dp"
                android:paddingBottom="14dp">

                <TextView
                    style="@style/SettingsOptionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_trusted_wifi_title" />

                <TextView
                    style="@style/SettingsOptionDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/settings_trusted_wifi_description"
                    android:textAlignment="viewStart" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_section_divider"
                android:visibility="@{viewmodel.isStartOnBootEnabled ? View.VISIBLE : View.GONE}"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="@{viewmodel.isStartOnBootEnabled ? View.VISIBLE : View.GONE}">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/settings_margin_left"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="14dp"
                    android:layout_weight="1"
                    android:onClick="startOnSystemBoot"
                    android:orientation="vertical">

                    <TextView
                        style="@style/SettingsOptionTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_start_on_boot_title" />

                    <TextView
                        style="@style/SettingsOptionDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/settings_start_on_boot_description"
                        android:textAlignment="viewStart" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_section_divider"
                android:visibility="@{viewmodel.isAlwaysOnVpnSupported ? View.VISIBLE : View.GONE}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="@{viewmodel.isAlwaysOnVpnSupported ? View.VISIBLE : View.GONE}">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/settings_margin_left"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="14dp"
                    android:layout_weight="1"
                    android:onClick="alwaysOnVpn"
                    android:orientation="vertical">

                    <TextView
                        style="@style/SettingsOptionTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_always_on_vpn_title" />

                    <TextView
                        style="@style/SettingsOptionDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/settings_always_on_vpn_description"
                        android:textAlignment="viewStart" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_section_divider"
                android:visibility="@{viewmodel.isAntiTrackerEnabled ? View.VISIBLE : View.GONE}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:onClick="antiSurveillance"
                android:orientation="vertical"
                android:paddingStart="@dimen/settings_margin_left"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:visibility="@{viewmodel.isAntiTrackerEnabled ? View.VISIBLE : View.GONE}">

                <TextView
                    style="@style/SettingsOptionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_anti_surveillance" />

                <TextView
                    style="@style/SettingsOptionDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/settings_anti_surveillance_description"
                    android:textAlignment="viewStart" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_section_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:onClick="customDns"
                android:orientation="vertical"
                android:paddingStart="@dimen/settings_margin_left"
                android:paddingTop="14dp"
                android:paddingBottom="14dp">

                <TextView
                    style="@style/SettingsOptionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_custom_dns" />

                <TextView
                    style="@style/SettingsOptionDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/settings_custom_dns_description"
                    android:textAlignment="viewStart" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_section_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/settings_margin_left"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="14dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/SettingsOptionTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_kill_switch" />

                    <TextView
                        style="@style/SettingsOptionDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/settings_kill_switch_description"
                        android:textAlignment="viewStart" />

                </LinearLayout>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/enable_kill_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="@dimen/settings_margin_right_extended"
                    android:checked="@{viewmodel.killSwitch}"
                    android:translationX="3dp"
                    app:onChanged="@{viewmodel.enableKillSwitch}"
                    app:onTouch="@{viewmodel.killSwitchTouchListener}"
                    app:theme="@style/AppTheme.SwitchCompat" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_section_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/settings_margin_left"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="14dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/SettingsOptionTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_enable_crashes" />

                    <TextView
                        style="@style/SettingsOptionDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:text="@string/settings_crash_logging_description"
                        android:textAlignment="viewStart" />

                </LinearLayout>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/enable_crashes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="@dimen/settings_margin_right_extended"
                    android:checked="@{viewmodel.crashLogging}"
                    android:translationX="3dp"
                    app:onChanged="@{viewmodel.enableCrashLoggingListener}"
                    app:theme="@style/AppTheme.SwitchCompat" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_section_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/settings_margin_left"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="14dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/SettingsOptionTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_enable_logging" />

                    <TextView
                        style="@style/SettingsOptionDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:text="@string/settings_do_not_collect_your_data"
                        android:textAlignment="viewStart" />

                </LinearLayout>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/enable_logging"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="@dimen/settings_margin_right_extended"
                    android:checked="@{viewmodel.logging}"
                    android:translationX="3dp"
                    app:onChanged="@{viewmodel.enableLoggingListener}"
                    app:theme="@style/AppTheme.SwitchCompat" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/settings_margin_left"
                android:background="@color/color_section_divider"
                android:visibility="@{viewmodel.logging ? View.VISIBLE : View.GONE}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_section_height"
                android:gravity="center_vertical"
                android:onClick="sendLogs"
                android:orientation="horizontal"
                android:visibility="@{viewmodel.logging ? View.VISIBLE : View.GONE}">

                <TextView
                    style="@style/SettingsAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/settings_margin_left"
                    android:text="@string/settings_send_logs" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>