<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/illustration_prompt_mailbox" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="0.04"
        android:text="@string/private_emails_new_feature_for_you"
        android:textColor="#398fe6"
        android:textAllCaps="true"
        android:textSize="12sp"
        android:textStyle="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="6dp"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="6sp"
        android:text="@string/private_emails_new_feature_title"
        android:textColor="#335266"
        android:textSize="18sp"
        android:textStyle="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="8sp"
        android:text="@string/private_emails_new_feature_description"
        android:textColor="#335266"
        android:textSize="16sp"
        android:textStyle="normal" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/got_it"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:letterSpacing="0.04"
            android:padding="5dp"
            android:text="@string/private_emails_new_feature_button"
            android:textColor="#398fe6"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:textStyle="normal" />

    </FrameLayout>
</LinearLayout>